finishing touches for user gameplay experience, fixed ghost container element shifting during window resize, re-positioned some ghost keyframes with margins to account for new container positioning, adjusted ghost attack probability again (470/500), autoplay backing theme audio track, replaced game over audio, ghost title positioning to account for new responsive width adjustment

--- a/style.css
+++ b/style.css
@@ -298,9 +298,10 @@ z-index:1;
   display:none;
   align-self:center;
   justify-content:center;
-    width: 100%;
+    /* width: 100%; */
     height: 15%;
     z-index:2;
+    margin-left:210px;
 }
 .ghostContainerAppear{
     position: absolute;
@@ -311,6 +312,7 @@ z-index:1;
     /* width: 100%; */
     height: 15%;
     z-index:2;
+ 
     /* border:solid blue; */
 }
 
@@ -450,7 +452,7 @@ display:none;
     height:300px;
     width:450px;
     margin-top:-170px;
-    margin-left:-140px;
+    margin-left:-300px;
     font-size:90px;
     color:rgb(109, 63, 105);
     text-shadow:4px 6px 4px rgb(44, 9, 41);
@@ -1161,7 +1163,7 @@ display:none;
 @keyframes ghostFloatThree2 {
     0%{
         /* initial command */
-        margin-right:7%;
+        margin-left:147%;
         transform: translatey(0px)   scale(.4);
     }
 
